# loupe

./: DEPLOY.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
Casks/: loupe.rb
design-src/: styles.css
design-src/components/core/: Button.jsx  KeyHint.jsx
design-src/components/review/: Thread.jsx
design-src/tokens/: colors.css  fonts.css  spacing.css  typography.css
design-src/ui_kits/loupe/: AnalyzeScreen.jsx  App.jsx  FileTree.jsx  LoupeLoader.jsx  Onboarding.jsx  ReviewScreen.jsx  SummaryScreen.jsx  data.jsx  index.html
docs/: engine-stage1-critique.md  engine-stage1-design.md  engine-stage1-spike.md  planning-v2.md  v2-critique.md  v2-design.md
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  loupe  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/engine/: basesignals.rs  basesignals_tests.rs  branches.rs  cache.rs  cache_dearday_test.rs  cache_pipeline_tests.rs  cache_tests.rs  cards.rs  clustercard.rs  clustercard_tests.rs  gitdiff.rs  jitdef.rs  jitdef_tests.rs  mod.rs  model.rs  pipeline_tests.rs  progress.rs  symbols.rs  tests.rs
src-tauri/src/engine/ai/: anthropic.rs  cli.rs  mod.rs  prompts.rs  steps.rs  steps_tests.rs  tests.rs  verify.rs  verify_tests.rs
src-tauri/src/engine/relations/: mod.rs  tests.rs
src/components/: AnalyzeScreen.jsx  Badge.jsx  FileTree.jsx  GhSetup.jsx  IconButton.jsx  Logo.jsx  LoupeLoader.jsx  ProgressSpine.jsx  ProjectMenu.jsx  Thread.jsx
src/data/: fixtures.js  highlight.js
src/screens/: Onboarding.jsx  ReviewScreen.jsx  Settings.jsx  SummaryScreen.jsx
src/styles/: global.css
src/styles/tokens/: colors.css  motion.css  spacing.css
