[package]
name = "loupe"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "loupe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# `loupe://review?...` deep links from the `loupe` CLI. single-instance (with the
# deep-link feature) routes a second invocation to the running app + focuses it.
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- engine stage 1 (spike-confirmed versions) ---
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
tree-sitter = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-rust = "0.24"

# --- engine stage 1 / AI foundation (clustering/ordering transport) ---
# rustls-tls (default-features=false) removes the native-tls/OpenSSL dep for simpler
# 3-OS Tauri builds. `stream` is reserved for the later SSE summary path.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures-util = "0.3"
async-trait = "0.1"

# --- ⑦ SHA caching (planning §8.2 / §8.1; v2-critique M2/M3) ---
# rusqlite `bundled`: vendored SQLite ⇒ no system libsqlite3 dep (3-OS Tauri builds).
# The cache `Connection` is wrapped in a `Mutex` (M2) with WAL + busy_timeout.
rusqlite = { version = "0.32", features = ["bundled"] }
# sha2: SHA-256 of the normalized `ClusterCardInput` (card_hash) + schema_ver mix-in.
sha2 = "0.10"
tree-sitter-kotlin-ng = "1.1"

[dev-dependencies]
tempfile = "3"

